--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -7,26 +7,16 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12 text-center">
-    <h2>Technologies used in this template application:</h2>
-  </div>
-
-</div>
-<div class="row">
-  <div class="col-md-3">
-      <h3>MongoDB</h3>
-      <p>The MongoDB is setup using mLab's service hosted on AWS. This is thus kept separate from the application itself.</p>
-  </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <h3>Express Backend</h3>
         <p>This is a solid Node.js/Express senver using Mongoose to organise models and query the MongoDB</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <h3>Angular-CLI</h3>
         <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <h3>JWT Tokens</h3>
-        <p>Full featured authentication using JSON web tokens. Login and store user data.</p>
+        <p>Full featured authentication using JSON web tokens. Login and staore user data.</p>
     </div>
 </div>
