--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -6,16 +6,23 @@
     <a class="btn btn-default" [routerLink]="['/login']">Login</a>
   </div>
 </div>
+<div class="row text-center">
+  <h3>List of technologies used:</h3>
+</div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
+        <h3>MongoDB</h3>
+        <p>The MongoDB is hosted bia mLab separate from the application on Heroku.</p>
+    </div>
+    <div class="col-md-3">
         <h3>Express Backend</h3>
         <p>This is a solid Node.js/Express senver using Mongoose to organise models and query the MongoDB</p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <h3>Angular-CLI</h3>
         <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <h3>JWT Tokens</h3>
         <p>Full featured authentication using JSON web tokens. Login and staore user data.</p>
     </div>
